--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "client",
-  "homepage": "https://lamiyaarahman.github.io/Doctor_Appointment_Booking_System/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy" :"npm run build",
-    "deploy" : "gh-pages -d dist"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "axios": "^1.7.9",
